crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__if_else_if_multiline.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "Code (indented inside a def):\n\n    if a then\n        1\n    else if b then\n        2\n    else\n        3\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 6,
            column: 10,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 10,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 13,
                        },
                        end: Position {
                            line: 3,
                            column: 14,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "b",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 9,
                        },
                        end: Position {
                            line: 4,
                            column: 10,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 6,
                    column: 9,
                },
                end: Position {
                    line: 6,
                    column: 10,
                },
            },
            value: Int(
                3,
            ),
        },
    },
}
