crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__if_else_next_line.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "if a {\n    1\n}\nelse {\n    2\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 2,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 2,
                        },
                    },
                    value: Block {
                        stmts: [],
                        tail: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 6,
                                    },
                                },
                                value: Number(
                                    NumberLit {
                                        value: 1.0,
                                        text: "1",
                                    },
                                ),
                            },
                        ),
                    },
                },
            },
        ],
        final_else: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 6,
                    },
                    end: Position {
                        line: 6,
                        column: 2,
                    },
                },
                value: Block {
                    stmts: [],
                    tail: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 5,
                                },
                                end: Position {
                                    line: 5,
                                    column: 6,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 2.0,
                                    text: "2",
                                },
                            ),
                        },
                    ),
                },
            },
        ),
    },
}
