crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__if_multiline.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "Code (indented inside a def):\n\n    if condition then\n        trueBranch\n    else\n        falseBranch\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 4,
            column: 20,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "condition",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 19,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "trueBranch",
                    },
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 20,
                },
            },
            value: Var {
                kind: LowVar,
                name: "falseBranch",
            },
        },
    },
}
