crates/alder-parse/src/expression/snapshots/alder_parse__expression__if___tests__if_no_else.snap
---
source: crates/alder-parse/src/expression/if_.rs
description: "if ready { go() }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var(
                        "ready",
                    ),
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: Block {
                        stmts: [],
                        tail: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                },
                                value: Call {
                                    function: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 14,
                                            },
                                        },
                                        value: Var(
                                            "go",
                                        ),
                                    },
                                    arguments: [],
                                },
                            },
                        ),
                    },
                },
            },
        ],
        final_else: None,
    },
}
